@@ -60,9 +60,9 @@ dark = #555555
 #calbody td div span { clear:both; display:block; }
 #calbody .label { font-size: 14px; line-height:24px; margin:0 15px 0 15px; }
 #calbody .nomargins .mxcnav { margin:0 1px; }
-#calbodylist .monthheading { font-size: 160%; line-height:200%; background-color: #efefef; margin:15px 0 0; padding:0 5px;}
+#calbodylist .monthheading { float:left; width:100%; overflow:hidden; font-size: 160%; line-height:200%; background-color: #efefef; margin:15px 0 0; padding:0 5px;}
 #calbodylist .monthheading.first { margin-top:5px; } 
-#calbodylist .event { padding: 5px; }
+#calbodylist .event { padding: 5px; display:block; float:left; width:100%;  clear:both; overflow:hidden; }
 #calbodylist .event H4 { margin:0; padding:0; line-height: 21px; }
 #calbody a, #calbodylist a { color: inherit; text-decoration:none; border-bottom:1px dotted;}
 li.mxcactivecat a { font-weight:bold; text-decoration: none; list-style-image: none; }
